# task-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  utils.py
src/task_tracker/: main.py  tasks.py  utils.py
tests/: test_operations.py
