[project]
name = "task-tracker"
version = "0.1.0"
description = "A CLI todo list app"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
tasks = "task_tracker.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
]
